updated ui and logic

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
         </div>
     </div>
 
+    <!-- Role Reveal Screen -->
+    <div id="role-reveal-screen" class="screen hidden">
+        <div class="reveal-content">
+            <h2 id="reveal-role" class="reveal-role">CREWMATE</h2>
+            <p id="reveal-word" class="reveal-word">SECRET WORD</p>
+        </div>
+    </div>
+
     <!-- Game Screen -->
     <div id="game-screen" class="screen wide hidden">
         <div class="game-header">
