updated ui and logic

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Sleuth</title>
+    <title>The Pretender</title>
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🕵️</text></svg>">
     <!-- Google Fonts for the retro game look -->
@@ -26,7 +26,7 @@
     <!-- Home Screen (Create/Join Game) -->
     <div id="home-screen" class="screen hidden">
         <div class="container">
-            <h1>Word Sleuth</h1>
+            <h1>The Pretender</h1>
             <p class="subtitle">A word game of deception</p>
             
             <div class="card">
@@ -83,7 +83,7 @@
     <!-- Game Screen -->
     <div id="game-screen" class="screen wide hidden">
         <div class="game-header">
-            <h1>Word Sleuth</h1>
+            <h1>The Pretender</h1>
             <div class="game-id-tag">
                 <p>Game ID</p>
                 <span id="gameScreenId"></span>
