updated ui and logic

--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@
     <div id="game-screen" class="screen wide hidden">
         <div class="game-header">
             <h1>The Pretender</h1>
-            <div class="game-id-tag">
-                <p>Game ID</p>
-                <span id="gameScreenId"></span>
+            <div class="header-controls">
+                <div class="game-id-tag">
+                    <p>Game ID</p>
+                    <span id="gameScreenId"></span>
+                </div>
+                <button id="exitGameBtn" class="btn red small">Exit</button>
             </div>
         </div>
         <div id="game-content">
