updated ui and logic

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <div id="playerList" class="player-list"></div>
                 <button id="startGameBtn" class="btn green">Start Game</button>
                 <p id="waitingForHost" class="hidden">Waiting for the host to start...</p>
+                <button id="exitLobbyBtn" class="btn red small" style="margin-top: 15px;">Exit Lobby</button>
             </div>
             <!-- Countdown Timer -->
             <div id="countdown-container" class="hidden">
