updated ui and logic

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             
             <div class="card">
                 <h2>Create a New Game</h2>
-                <button id="createGameBtn" class="btn green">Create Game</button>
+                <button id="createGameBtn" class="btn green" disabled>Create Game</button>
             </div>
 
             <div class="card">
                 <h2>Join an Existing Game</h2>
                 <input id="joinGameIdInput" type="text" placeholder="ENTER GAME ID" maxlength="6">
-                <button id="joinGameBtn" class="btn blue">Join Game</button>
+                <button id="joinGameBtn" class="btn blue" disabled>Join Game</button>
             </div>
         </div>
     </div>
